--- a/.github/workflows/daily-fetch-users.yml
+++ b/.github/workflows/daily-fetch-users.yml
@@ -14,6 +14,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # 1) Install Node (with pnpm support) and enable corepack
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'pnpm'
+
+      # 2) Install your dependencies via pnpm
+      - name: Install dependencies
+        run: |
+          corepack enable
+          pnpm install --frozen-lockfile
+
+      # 3) Fetch and save users
       - name: Fetch and save users
         run: |
           node -e "
@@ -36,6 +49,7 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
 
+      # 4) Upload artifact
       - name: Upload user data artifact
         uses: actions/upload-artifact@v3
         with:
