--- a/.github/workflows/daily-fetch-users.yml
+++ b/.github/workflows/daily-fetch-users.yml
@@ -43,10 +43,16 @@ jobs:
             const { data, error } = await sb
               .from('admin_user_view')
               .select('id, email, name, organization');
-            if (error) throw error;
+            if (error) {
+              console.error('Supabase Error:', JSON.stringify(error, null, 2));
+              process.exit(1);
+            }
             fs.writeFileSync('users.json', JSON.stringify(data, null, 2));
             console.log('Saved', data.length, 'users');
-          })();
+          })().catch(err => {
+            console.error('Unexpected error:', err);
+            process.exit(1);
+          });
           "
 
       # 5) Upload the JSON as an artifact
