--- a/.github/workflows/daily-fetch-users.yml
+++ b/.github/workflows/daily-fetch-users.yml
@@ -42,7 +42,7 @@ jobs:
             );
             const { data, error } = await sb
               .from('admin_user_view')
-              .select('id, email, name, organization');
+              .select('email, name, organization');
             if (error) {
               console.error('Supabase Error:', JSON.stringify(error, null, 2));
               process.exit(1);
