--- a/.github/workflows/daily-fetch-users.yml
+++ b/.github/workflows/daily-fetch-users.yml
@@ -29,7 +29,7 @@ jobs:
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-        run: npx tsx ./scripts/fetchUsers.ts
+        run: npx tsx scripts/fetchUsers.ts
 
       # 5) Upload the JSON as an artifact
       - name: Upload user data artifact
