--- a/.github/workflows/daily-fetch-users.yml
+++ b/.github/workflows/daily-fetch-users.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   fetch-users:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: supabase_user  # 👈 this line is important
 
     steps:
       # 1) Check out your repo
@@ -29,7 +32,7 @@ jobs:
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-        run: npx tsx supabase_user/scripts/fetchUsers.ts
+        run: npx tsx scripts/fetchUsers.ts
 
       # 5) Upload the JSON as an artifact
       - name: Upload user data artifact
